# Buildle

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
proto/: CMakeLists.txt  Wordle.proto  buildle.proto
server/: CMakeLists.txt
server/src/: config.cpp  config.h  game.cpp  game.h  main.cpp
